--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ http://www.tooplate.com/view/2089-meteor
                 </div>
                 <div class="col-md-6">
                     <div class="right-image">
-                        <img src="img/what-we-do-right-image.png" alt="">
+                        <img src="img/mathias-bach-laursen-icOzM-yHXiQ-unsplash_1.jpg" alt="">
                     </div>
                 </div>
             </div>
