Fifth commit on 21.08

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ http://www.tooplate.com/view/2089-meteor
                 </div>
                 <div class="col-md-6">
                     <div class="right-image">
-                        <img src="img/mathias-bach-laursen-icOzM-yHXiQ-unsplash_1.jpg" alt="">
+                        <img src="./img/new images/mathias-bach-laursen-icOzM-yHXiQ-unsplash_1.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -219,7 +219,7 @@ http://www.tooplate.com/view/2089-meteor
                             <div class="col-md-3 col-sm-6 project-item mix workspace">
                               <div class="thumb">
                                   <div class="image">
-                                    <img src="img/download 01.jpg">
+                                    <img src="img/portfolio_01.jpg">
                                   </div>
                                   <div class="hover-effect">
                                     <a href="img/portfolio_big_01.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
