Eighth commit on 22.08

--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@ http://www.tooplate.com/view/2089-meteor
                             <div class="col-md-3 col-sm-6 project-item mix workspace">
                               <div class="thumb">
                                   <div class="image">
-                                    <img src="img/portfolio_01.jpg">
+                                    <img src="./img/new images/mathias-bach-laursen-icOzM-yHXiQ-unsplash_1 - Copy.jpg">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_01.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="./img/new images/mathias-bach-laursen-icOzM-yHXiQ-unsplash_1 - Copy.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
