--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@ http://www.tooplate.com/view/2089-meteor
                             <div class="col-md-3 col-sm-6 project-item mix technology">
                               <div class="thumb">
                                   <div class="image">
-                                    <img src="img/portfolio_03.jpg">
+                                    <img src="./img/new images/997-270x230.jpg">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_03.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="./img/new images/997-270x230.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
