Eleventh commit on 21.08

--- a/index.html
+++ b/index.html
@@ -249,20 +249,20 @@ http://www.tooplate.com/view/2089-meteor
                             <div class="col-md-3 col-sm-6 project-item mix city">
                               <div class="thumb">
                                   <div class="image">
-                                    <img src="img/portfolio_04.jpg">
+                                    <img src="./img/new images/742-270x230.jpg">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_04.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="./img/new images/742-270x230.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
                             <div class="col-md-3 col-sm-6 project-item mix nature">
                               <div class="thumb">
                                   <div class="image">
-                                    <img src="img/portfolio_05.jpg">
+                                    <img src="./img/new images/22-270x230.jpg">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_05.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="./img/new images/22-270x230.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
