--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ http://www.tooplate.com/view/2089-meteor
                             <div class="col-md-3 col-sm-6 project-item mix workspace">
                               <div class="thumb">
                                   <div class="image">
-                                    <img src="img/portfolio_07.jpg">
+                                    <img src="./img/new images/309-270x230.jpg">
                                   </div>
                                   <div class="hover-effect">
                                     <a href="img/portfolio_big_07.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
