Fourteenth commit on 21.08

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="./img/new images/309-270x230.jpg">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_07.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="./img/new images/548-1800x1200.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
