--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ http://www.tooplate.com/view/2089-meteor
                             <div class="col-md-3 col-sm-6 project-item mix city">
                               <div class="thumb">
                                   <div class="image">
-                                    <img src="img/portfolio_08.jpg">
+                                    <img src="./img/new images/994-270x230.jpg">
                                   </div>
                                   <div class="hover-effect">
                                     <a href="img/portfolio_big_08.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
