--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="./img/new images/994-270x230.jpg">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="img/portfolio_big_08.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="./img/new images/1049-1800x1200.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
