Twenty second commit on 21.08

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ http://www.tooplate.com/view/2089-meteor
                                     <img src="./img/new images/mathias-bach-laursen-icOzM-yHXiQ-unsplash_1 - Copy.jpg">
                                   </div>
                                   <div class="hover-effect">
-                                    <a href="./img/new images/mathias-bach-laursen-icOzM-yHXiQ-unsplash_1 - Copy.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                    <a href="./img/new images/744-1800x1200.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                   </div>
                               </div>
                             </div>
