Twenty third commit on 21.08

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ http://www.tooplate.com/view/2089-meteor
                 <div class="col-md-6">
                     <div class="blog-item b1">
                         <div class="thumb">
-                            <img src="img/blog_01.jpg" alt="">
+                            <img src="./img/new images/240-570x470.jpg" alt="">
                             <div class="text-content">
                                 <h4>Delecioius Food Served</h4>
                                 <span>Posted: <em>George</em>  /  Date: <em>11 Aug 2017</em>  /  Category: <em>Design</em></span>
