Twenty fourth commit on 21.08

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ http://www.tooplate.com/view/2089-meteor
                 <div class="col-md-6">
                     <div class="blog-item second-blog b2">
                         <div class="thumb">
-                            <img src="img/blog_02.jpg" alt="">
+                            <img src="./img/new images/940-570x220.jpg" alt="">
                             <div class="text-content">
                                 <h4>Creative &amp; Clean Workspace</h4>
                                 <span>Posted: <em>Kerley</em>  /  Date: <em>24 Jul 2017</em>  /  Category: <em>Artwork</em></span>
