Twenty sixth commit on 21.08

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ http://www.tooplate.com/view/2089-meteor
                 <div class="col-md-6">
                     <div class="blog-item b3">
                         <div class="thumb">
-                            <img src="img/blog_03.jpg" alt="">
+                            <img src="./img/new images/187-570x220.jpg" alt="">
                             <div class="text-content">
                                 <h4>Crashed Plane Captured</h4>
                                 <span>Posted: <em>Johnny</em>  /  Date: <em>16 Jul 2017</em>  /  Category: <em>Branding</em></span>
