Twenty seventh commit on 21.08

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ http://www.tooplate.com/view/2089-meteor
             <div class="row">
                 <div class="col-md-6">
                     <div class="map">
-                        <img src="img/map.jpg" alt="">
+                        <img src="./img/new images/342-570x320.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
